--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/Kobold_Icon.png" alt="" /></span>
-							<h1 id="title">KIR</h1>
-							<p>Kobold Interplanetary Resources</p>
 						</div>
 
 					<!-- Nav -->
@@ -59,14 +57,15 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">We are Kobold Interplanetary Resources. A competition team from the Colorado School of Mines building an autonomous robot to mine water on the Moon.</h2>
-								<p>We are competing in the 2018/2019 <br />
-								<a href="https://www.nasa.gov/offices/education/centers/kennedy/technology/nasarmc.html">NASA Robotic Mining Competition</a>.</p>
+								<!--<h2 class="alt">We are Kobold Interplanetary Resources. </h2><br />
+								<p>A group of students from the Colorado School of Mines <br /> building an autonomous robot to mine on the Moon.<br />
+								We are competing in the 2018/2019 <br />
+								<a href="https://www.nasa.gov/offices/education/centers/kennedy/technology/nasarmc.html">NASA Robotic Mining Competition</a>.</p> 
 							</header>
 
 							<footer>
 								<a href="#portfolio" class="button scrolly">Learn More</a>
-							</footer>
+							</footer> -->
 
 						</div>
 					</section>
