--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/Kobold_Icon.png" alt="" /></span>
+							<span class="image avatar48"><img src="images/thumbnail2.png" alt="" /></span>
 						</div>
 
 					<!-- Nav -->
@@ -55,18 +55,11 @@
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
 						<div class="container">
-
 							<header>
-								<!--<h2 class="alt">We are Kobold Interplanetary Resources. </h2><br />
-								<p>A group of students from the Colorado School of Mines <br /> building an autonomous robot to mine on the Moon.<br />
-								We are competing in the 2018/2019 <br />
-								<a href="https://www.nasa.gov/offices/education/centers/kennedy/technology/nasarmc.html">NASA Robotic Mining Competition</a>.</p> 
-							</header>
-
-							<footer>
-								<a href="#portfolio" class="button scrolly">Learn More</a>
-							</footer> -->
-
+								<video width="300" height="200" id="video" autoplay loop>
+  								<source src="images/video.mp4" type="video/mp4">
+  								</video>
+							</header>	
 						</div>
 					</section>
 
